# numcpp

./: CMakeLists.txt
numcpp/: CMakeLists.txt  TODO.txt  core.h  numcpp.cpp  numcpp.h  numpy.h
numcpp/base/: diag.h  initializers.h  random.cpp  rearrangeArray.h  sort.cpp  sort.h  sums.h
numcpp/core/: abstractexpression.h  array.h  arraybase.h  arraycore.h  arrayref.h  coreFunc.h  dyntypearray.cpp  dyntypearray.h  functions.h  index.h  initialization.h  iterator.h  itertools.h  manager.h  memoryblock.cpp  memoryblock.h  ostream.h  slice.cpp  slice.h  utils.cpp  utils.h
numcpp/io/: file.h  io.cpp
numcpp/linalg/: solver.cpp
numcpp/numcpp/: CMakeLists.txt
numcpp/numcpp/core/: slice.cpp
